# Taller1---Arquitectura-de-software

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/awesome_agent_api/application/: chat_service.py  dtos.py  product_service.py
src/awesome_agent_api/domain/: entities.py  exceptions.py  repositories.py
src/awesome_agent_api/infrastructure/api/: main.py  models.py
src/awesome_agent_api/infrastructure/db/: database.py  init_data.py  models.py
src/awesome_agent_api/infrastructure/llm_providers/: gemini_service.py
src/awesome_agent_api/infrastructure/repositories/: chat_repository.py  product_repository.py
tests/: test_entities.py  test_services.py
