[project]
name = "awesome-agent-api"
version = "0.1.0"
description = "API REST de e-commerce de zapatos con chat inteligente."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "google-generativeai==0.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "httpx==0.25.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
